extend MANPATH too with path for child prefix (Portage version: 2.2.00.12528-prefix/svn/Interix x86)

--- a/dev-util/cross-prefix-setup/files/cross-prefix-setup.in
+++ b/dev-util/cross-prefix-setup/files/cross-prefix-setup.in
@@ -113,6 +113,7 @@ ebegin "creating '${_target_prefix}/etc/profile'"
 export EPREFIX="${_target_prefix}"
 export PATH="${_target_prefix}/bin:${_target_prefix}/usr/bin:\${PATH}"
 export PKG_CONFIG_PATH="${_target_prefix}/usr/lib/pkgconfig:\$PKG_CONFIG_PATH"
+export MANPATH="${_target_prefix}/usr/share/man:\$MANPATH"
 
 if [ -e "${_target_prefix}/etc/profile.env" ]; then
 	. "${_target_prefix}/etc/profile.env"
