--- a/sys-apps/gawk/files/filefuncs/Makefile
+++ b/sys-apps/gawk/files/filefuncs/Makefile
@@ -1,7 +1,7 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # Author:  Martin Schlemmer <azarah@gentoo.org>
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/gawk/files/filefuncs/Makefile,v 1.8 2006/03/28 07:15:31 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/gawk/files/filefuncs/Makefile,v 1.9 2009/01/16 17:16:48 truedfx Exp $
 
 CC ?= gcc
 LD = $(CC)
