added SYNC to setup, keyworded ~x86-interix (Portage version: 2.2.00.13243-prefix/svn/Interix x86)

--- a/app-portage/prefix-chain-setup/files/prefix-chain-setup.in
+++ b/app-portage/prefix-chain-setup/files/prefix-chain-setup.in
@@ -89,6 +89,7 @@ ebegin "creating make.conf"
 	echo "# all that is possible"
 	echo "#"
 	echo "PORTDIR=\"$(portageq envvar PORTDIR)\""
+	echo "SYNC=\"$(portageq envvar SYNC)\""
 	case "${CHILD_PROFILE}" in
 	*winnt*)	echo "PORTAGE_TMPDIR=/var/tmp" ;;
 	*)			echo "PORTAGE_TMPDIR=\"${CHILD_EPREFIX}/var/tmp\"" ;;
