--- a/scripts/eupdate.in
+++ b/scripts/eupdate.in
@@ -448,7 +448,7 @@ fetch_files() {
 	has() { :; }
 	hasq() { :; }
 	use() { :; }
-	use_enable() { ;; }
+	use_enable() { :; }
 	use_with() { :; }
 	addwrite() { :; }
 	addpredict() { :; }
